# robotframework-poetry-demo

./: .gitignore  README.md  pyproject.toml  tasks.py
docs/: README.md
flat/Flat/: Keywords.resource  Variables.resource  __init__.py
nested/Nested/Keywords/: API.resource  Web.resource
nested/Nested/Variables/: Global.resource
split/Global/: Keywords.resource  Variables.resource
split/Shop/: Keywords.resource  Variables.resource
split/UserGuide/: Keywords.resource  Variables.resource
src/RobotFrameworkResources/keywords/: Web.resource
src/RobotFrameworkResources/variables/: Urls.resource
test/: atest.robot
tests/suites/: test_flat.robot  test_nested.robot
tests/suites/split/: test_global.robot  test_shop.robot  test_user_guide.robot
