[tool.poetry]
name="robotframework-poetry-demo"
version = "1.0.0"
description = "A demo project showing how to set up a distributable Robot Framework project."
license = "Apache-2.0"
authors = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
readme =  "./docs/README.md"
homepage = "https://github.com/MarketSquare/robotframework-poetry-demo"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Framework :: Robot Framework",
]
packages = [
    { include = "RobotFrameworkResources", from = "src" },
]
include = ["*.resource"]

[[tool.poetry.source]]
name = 'private'
url = 'http://example.com/simple'

[tool.poetry.dependencies]
python = "^3.8"
robotframework = ">=4"
robotframework-browser = "^12.1.0"
"ruamel.yaml" = "0.17"
robotframework-openapidriver = "^3.1.0"

[tool.poetry.dev-dependencies]
invoke = "*"
robotframework-stacktrace = "*"
robotframework-tidy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "invoke",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
src_paths = [
    "src"
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = ["logging-fstring-interpolation", "missing-class-docstring", "missing-function-docstring"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.'FORMAT CHECKER']
max-line-length=120

[tool.pylint.'SIMILARITIES CHECKER']
ignore-imports="yes"
