[tool.poetry]
name="robotframework-poetry-demo"
version = "1.1.0"
description = "A demo project showing how to set up a distributable Robot Framework project."
license = "Apache-2.0"
authors = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
readme =  "./docs/README.md"
homepage = "https://github.com/MarketSquare/robotframework-poetry-demo"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Framework :: Robot Framework",
    "Private :: Not intended to be uploaded to pypi",
]
packages = [
    {include = "Flat", from = "flat"},
    {include = "Nested", from = "nested"},
    {include = "Global", from = "split"},
    {include = "Shop", from = "split"},
    {include = "UserGuide", from = "split"},
]
include = ["*.resource"]

[[tool.poetry.source]]
name = 'private'
url = 'http://example.com/simple'

[tool.poetry.dependencies]
python = "^3.8"
robotframework = ">=5"

[tool.poetry.dev-dependencies]
robotframework-tidy = "^2.3"
robotframework-robocop = "^2.0.2"
invoke = "^1.7.1"
mypy = "^0.960"
pylint = "^2.13.9"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "invoke",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
src_paths = [
    "src"
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = ["logging-fstring-interpolation", "missing-class-docstring", "missing-function-docstring"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.'FORMAT CHECKER']
max-line-length=120

[tool.pylint.'SIMILARITIES CHECKER']
ignore-imports="yes"
