[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["*.resource"]

[tool.hatch.build.targets.wheel]
packages = [
    "flat/Flat",
    "nested/Nested",
    "split/Global",
    "split/Shop",
    "split/UserGuide",
]

[project]
name = "robotframework-packaging-demo"
version = "2.0.0"
description = "An example project showing how Robot Framework resource files can be distributed."
readme =  "./docs/README.md"
authors = [{name = "Robin Mackaij", email = "r.a.mackaij@gmail.com"}]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Robot Framework",
    "Private :: Not intended to be uploaded to pypi",
]
requires-python = ">= 3.10"
dependencies = [
    "robotframework",
]

[project.urls]
homepage = "https://github.com/MarketSquare/robotframework-poetry-demo"

[tool.poetry]
packages = [
    {include = "Flat", from = "flat"},
    {include = "Nested", from = "nested"},
    {include = "Global", from = "split"},
    {include = "Shop", from = "split"},
    {include = "UserGuide", from = "split"},
]
